# llvm-course

./: README.md
ast-matcher/: CMakeLists.txt  readme.md  run.sh  setup  setup.sh
ast-matcher/input/: ex1.cpp  for1.c  for2.c  for3.c  simple.c
ast-matcher/lib/: CMakeLists.txt  forMatcher.cpp
clang-plugins/: CMakeLists.txt  Hello.cpp
llvm-metadata/: calcDelta.bc  calcDelta.c  calcDelta.ll
llvm-metadata/Class 1/: fibonacci.cpp
llvm-metadata/Class 2/: README.md
llvm-metadata/Class 2/SignRecPass/: CMakeLists.txt  README.md
llvm-metadata/Class 2/SignRecPass/example/: Linked_List.c
llvm-metadata/Class 2/SignRecPass/include/: SignatureRecover.h
llvm-metadata/Class 2/SignRecPass/lib/: CMakeLists.txt  Makefile  SignatureRecover.cpp  cmake_install.cmake
llvm-metadata/Class 3/: README.md
llvm-metadata/Class 3/TrackingPass/: CMakeLists.txt
llvm-metadata/Class 3/TrackingPass/example/: simple-integer.bc  simple-integer.c  simple-integer.ll
llvm-metadata/Class 3/TrackingPass/include/: VarTracking.h
llvm-metadata/Class 3/TrackingPass/lib/: CMakeLists.txt  VarTracking.cpp
llvm-passes/: .clang-format  .gitignore  CMakeLists.txt  README.md
llvm-passes/examples/: foo.ll
llvm-passes/include/: AddConst.h
llvm-passes/lib/: AddConstAnalysis.cpp  AddConstPass.cpp  AddConstPlugin.cpp  CMakeLists.txt
llvm-passes/tool/: CMakeLists.txt  Main.cpp
